--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -33,12 +33,12 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
-      # - uses: webfactory/ssh-agent@v0.5.0
-        # with:
-        #   ssh-private-key: ${{ secrets.GH_PAGES_DEPLOY }}
+      - uses: webfactory/ssh-agent@v0.5.0
+        with:
+          ssh-private-key: ${{ secrets.GH_PAGES_DEPLOY }}
       - name: Release to GitHub Pages
         env:
-          # USE_SSH: true
+          USE_SSH: true
           GIT_USER: git
         run: |
           git config --global user.email "adhorowitzd@gmail.com"
