--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "SET GIT_USER=bfp4f360&&docusaurus deploy"
+    // "deploy": "SET GIT_USER=bfp4f360&&docusaurus deploy"
   },
   "dependencies": {
     "@docusaurus/core": "^2.0.0-alpha.56",
