--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "swizzle": "docusaurus swizzle"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-alpha.56",
+    "@docusaurus/core": "^2.0.0-beta.ff31de0ff",
     "@docusaurus/preset-classic": "^2.0.0-alpha.56",
     "classnames": "^2.2.6",
     "react": "^16.8.4",
