--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@docusaurus/core": "^2.0.0-beta.ff31de0ff",
     "@docusaurus/preset-classic": "^2.0.0-alpha.56",
     "classnames": "^2.2.6",
+    "prism-react-renderer": "^1.2.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   },
