--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@docusaurus/core": "^2.0.0-beta.ff31de0ff",
     "@docusaurus/preset-classic": "^2.0.0-alpha.56",
+    "@mdx-js/react": "^1.6.22",
     "classnames": "^2.2.6",
     "prism-react-renderer": "^1.2.1",
     "react": "^16.8.4",
